<resources>
    <string name="app_name" translatable="false">Feedme</string>
    <string name="facebook_app_id" translatable="false">796924880472669</string>
    <string name="facebook_provider_app_id" translatable="false">com.facebook.app.FacebookContentProvider796924880472669</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb473716629660112</string>
    <string name="google_api_key_1" translatable="false">AIzaSyAAlhxGDSYUzfdyvknR9mFqnNz46Da9Rzw</string>
    <string name="font_default" translatable="false">fonts/dosis_book.ttf</string>
    <string name="font_monospace" translatable="false">fonts/dosis_semibold.ttf</string>
    <string name="font_serif" translatable="false">fonts/dosis_medium.ttf</string>
    <string name="font_sans_serif" translatable="false">fonts/dosis_light.ttf</string>
    <string name="language_en" translatable="false">English</string>
    <string name="language_ar" translatable="false">Arabic</string>
    <string name="progress_dialog_tv_message_text_default">Please Wait</string>
    <string name="progress_dialog_tv_message_text_address_fetch">Getting Your Address</string>
    <string name="alert_dialog_bt_yes">Yes</string>
    <string name="alert_dialog_bt_no">No</string>
    <string name="alert_dialog_bt_ok">OK</string>
    <string name="alert_dialog_bt_cancel">Cancel</string>
    <string name="alert_dialog_bt_default">Default</string>
    <string name="alert_dialog_title_logout">Logout</string>
    <string name="alert_dialog_text_logout">Are you sure you want to logout ?</string>
    <string name="alert_dialog_title_delete_dish">Delete</string>
    <string name="alert_dialog_text_delete_dish">Are you sure, you want to delete this item permanently ?</string>
    <string name="alert_dialog_title_activate_dish">Activate Item</string>
    <string name="alert_dialog_text_activate_dish">Do you want to activate this item ?</string>
    <string name="alert_dialog_title_deactivate_dish">Deactive Item</string>
    <string name="alert_dialog_text_deactivate_dish">Do you want to deactivate this item ?</string>
    <string name="alert_dialog_title_clear_basket">Clear Basket</string>
    <string name="alert_dialog_text_clear_basket">You already added dish of another restaurant in your basket.\nAre you sure, you want to clear basket?</string>
    <string name="alert_dialog_text_clear_basket_2">Are you sure, you want to clear basket?</string>
    <string name="alert_dialog_title_delete_address">Delete Address</string>
    <string name="alert_dialog_text_delete_address">Are you sure, address will be deleted permanently ?</string>
    <string name="alert_dialog_title_payment_method">Select Payment Method</string>
    <string name="alert_dialog_text_payment_method">How would you like to do the payment ?</string>
    <string name="alert_dialog_bt_online">Online</string>
    <string name="alert_dialog_bt_cod">Cash On Delivery</string>
    <string name="alert_dialog_title_accept_order">Accept Order</string>
    <string name="alert_dialog_text_accept_order">Order will be accepted. Are you sure ?</string>
    <string name="alert_dialog_title_reject_order">Reject Order</string>
    <string name="alert_dialog_text_reject_order">Order will be rejected. Are you sure ?</string>
    <string name="alert_dialog_title_reorder">Reorder</string>
    <string name="alert_dialog_text_reorder">Are you sure, current items will be cleared from basket?</string>
    <string name="alert_dialog_title_change_language">Change Language</string>
    <string name="alert_dialog_title_photo_picker">Add Photo</string>
    <string name="alert_dialog_text_photo_picker_camera">Take Photo</string>
    <string name="alert_dialog_text_photo_picker_gallery">Choose from Gallery</string>
    <string name="alert_dialog_text_photo_picker_cancel">Cancel</string>
    <string name="alert_dialog_title_location_disabled">Location Service Disabled</string>
    <string name="alert_dialog_text_location_disabled">Please enable location service</string>
    <string name="alert_dialog_text_location_disabled_enable">Enable</string>
    <string name="menu_close">Close</string>
    <string name="menu_location">Current Location</string>
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>
    <string name="google_play_service_not_avail_error">Google play services not available</string>
    <string name="google_play_service_reinstall_error">Problem in google play service, please reinstall it</string>
    <string name="geocoder_location_address_not_found">Address not found</string>
    <string name="empty_menu">Menu is empty</string>
    <string name="no_restaurant">No Restaurant</string>
    <string name="fb_user_already_exist">User already exist</string>
    <string name="select_address">Please select a address</string>
    <string name="not_in_range">Restaurant do not deliver on this address</string>
    <string name="select_payment_card">Please select a card</string>
    <string name="already_selected_language">is already current language</string>
    <string name="not_logged_in">Please log in first</string>
    <string name="empty_first_name">First name is required</string>
    <string name="invalid_first_name">Please provide valid first name</string>
    <string name="long_first_name">First name should not be longer than 15 characters</string>
    <string name="empty_last_name">Last name is required</string>
    <string name="invalid_last_name">Please provide valid last name</string>
    <string name="long_last_name">Last name should not be longer than 15 characters</string>
    <string name="empty_email">Email Address is required</string>
    <string name="empty_confirm_email">Please confirm email address</string>
    <string name="invalid_email">Please provide valid email address</string>
    <string name="not_match_email">Email and confirm email do not match.</string>
    <string name="empty_password">Password is required</string>
    <string name="minimum_password">Password should be 6 character long</string>
    <string name="invalid_password">Password must contain atleast one alphabetic and numeric character</string>
    <string name="empty_confirm_password">Confirm Password is required</string>
    <string name="not_match_password">Password and confirm password do not match.</string>
    <string name="empty_country_code">Country\ncode is\nrequired</string>
    <string name="empty_phone">Phone number is required</string>
    <string name="invalid_phone">Please provide a valid phone number</string>
    <string name="mandatory_logo">Please provide your restaurant logo</string>
    <string name="empty_otp">Please provide the OTP sent on your phone number</string>
    <string name="incorrect_otp">Incorrect OTP</string>
    <string name="minimum_otp">Please enter 6 digit OTP</string>
    <string name="empty_contact_person_name">Contact Person Name is required</string>
    <string name="invalid_contact_person_name">Please provide valid contact person name</string>
    <string name="long_contact_person_name">Contact person name should not be longer than 30 characters</string>
    <string name="empty_restaurant_name">Restaurant Name is required</string>
    <string name="invalid_restaurant_name">Please provide valid restaurant name</string>
    <string name="long_restaurant_name">Restaurant name should not be longer than 30 characters</string>
    <string name="empty_cuisine_type">Please provide cuisine type</string>
    <string name="empty_working_days">Please provide working days</string>
    <string name="empty_address">Please provide address</string>
    <string name="empty_country">Please provide country</string>
    <string name="empty_city">Please provide city</string>
    <string name="empty_zip_code">Please provide zip code</string>
    <string name="empty_opening_hours">Please provide opening hours</string>
    <string name="empty_closing_hours">Please provide closing hours</string>
    <string name="empty_minimum_order_amount">Please provide minimum order amount</string>
    <string name="empty_delivery_charges">Please provide delivery charges</string>
    <string name="empty_delivery_zip_codes">Please provide delivery areas</string>
    <string name="empty_description">Please provide few lines about restaurant</string>
    <string name="mandatory_image">Please provide atleast one image</string>
    <string name="empty_course_type">Please provide course type</string>
    <string name="empty_menu_item_course_type">Please select a course type</string>
    <string name="empty_menu_item_name">Please provide item name</string>
    <string name="empty_menu_item_price">Please provide item price</string>
    <string name="empty_menu_item_description">Please provide few lines for item description</string>
    <string name="item_activated">Menu item activated</string>
    <string name="item_deactivated">Menu item deactivated</string>
    <string name="opening_time_after_closing_time">Opening time is after closing time</string>
    <string name="closing_time_before_opening_time">Closing time is before opening time</string>
    <string name="skip_customer_main_tv_or">OR</string>
    <string name="action_home">Home</string>
    <string name="action_my_account">My Account</string>
    <string name="action_restaurant_profile">Restaurant Profile</string>
    <string name="action_order_history">Order History</string>
    <string name="action_order_list">Order List</string>
    <string name="action_menu_management">Menu Management</string>
    <string name="action_discount_mangement">Discount Mangement</string>
    <string name="action_view_earning">View Earning</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_my_bucket">My Basket</string>
    <string name="action_payment">Payment Methods</string>
    <string name="action_delivery_address">Delivery Address</string>
    <string name="fragment_add_course_type_tv_title_text">Add Course Type</string>
    <string name="fragment_add_course_type_et_course_type_hint">Course Type</string>
    <string name="fragment_add_course_type_bt_submit_text">Submit</string>
    <string name="fragment_add_cuisine_type_tv_title_text">Add Cuisine Type</string>
    <string name="fragment_add_cuisine_type_et_cuisine_type_hint">Cuisine Type</string>
    <string name="fragment_add_cuisine_type_bt_submit_text">Submit</string>
    <string name="merchant_details_tv_account_holder_name_tag_text">Account Holder Name</string>
    <string name="merchant_details_et_bank_name_tag_text">Bank Name</string>
    <string name="merchant_details_tv_account_number_tag_text">Account Number</string>
    <string name="merchant_details_et_confirm_account_number_tag_text">Confirm Account Number</string>
    <string name="merchant_details_et_ifsc_code_tag_text">IFSC Code</string>
    <string name="merchant_details_bt_save_text">Save</string>
    <string name="merchant_details_bt_cancel_text">Cancel</string>
    <string name="dialog_share_tv_facebook_text">Facebook</string>
    <string name="dialog_share_tv_twitter_text">Twitter</string>
    <string name="dialog_share_tv_gmail_text">Gmail</string>
    <string name="dialog_share_tv_message_text">Message</string>
    <string name="set_order_status">Set Order Status</string>
    <string name="under_preparation">Under Preparation</string>
    <string name="ready_to_pick_or_deliver">Ready to Pick or Deliver</string>
    <string name="in_transit">In Transit</string>
    <string name="delivery_or_picked">Delivery or Picked</string>
    <string name="done">Done</string>
    <string name="notification">Notifications</string>
    <string name="customer">As a Customer</string>
    <string name="restaurant">As a Restaurant</string>
</resources>