<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_account"
            android:icon="@mipmap/ic_my_account"
            android:title="@string/action_my_account" />
        <item
            android:id="@+id/nav_restaurant_profile"
            android:icon="@mipmap/ic_my_account"
            android:title="@string/action_restaurant_profile" />
        <item
            android:id="@+id/nav_order_history"
            android:icon="@mipmap/ic_order_history"
            android:title="@string/action_order_history" />
        <item
            android:id="@+id/nav_order_list"
            android:checked="true"
            android:icon="@mipmap/ic_order_list"
            android:title="@string/action_order_list" />
        <item
            android:id="@+id/nav_menu_management"
            android:icon="@mipmap/ic_menu_mgmt"
            android:title="@string/action_menu_management" />
        <item
            android:id="@+id/nav_discount_management"
            android:icon="@mipmap/ic_discount_mgmt"
            android:title="@string/action_discount_mangement" />
        <item
            android:id="@+id/nav_view_earning"
            android:icon="@mipmap/ic_earning"
            android:title="@string/action_view_earning" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_logout"
            android:checkable="false"
            android:icon="@mipmap/ic_logout"
            android:title="@string/action_logout" />
    </group>
</menu>