<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@mipmap/ic_home"
            android:title="@string/action_home" />
        <item
            android:id="@+id/nav_account"
            android:icon="@mipmap/ic_my_account"
            android:title="@string/action_my_account" />
        <item
            android:id="@+id/nav_order_history"
            android:icon="@mipmap/ic_order_history"
            android:title="@string/action_order_history" />
        <item
            android:id="@+id/nav_my_basket"
            android:checkable="false"
            android:icon="@mipmap/ic_basket"
            android:title="@string/action_my_bucket" />
        <item
            android:id="@+id/nav_payment"
            android:checkable="false"
            android:icon="@mipmap/ic_payment"
            android:title="@string/action_payment" />
        <item
            android:id="@+id/nav_delivery_address"
            android:checkable="false"
            android:icon="@mipmap/ic_delivery_address"
            android:title="@string/action_delivery_address" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@mipmap/ic_notification"
            android:title="@string/notification" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_logout"
            android:checkable="false"
            android:icon="@mipmap/ic_logout"
            android:title="@string/action_logout" />
    </group>

</menu>