<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="@dimen/working_days_ll_title_margin"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/dialog_fragment_working_days_ll_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title"
            style="@style/TextView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_order_status" />

        <ImageView
            android:id="@+id/dialog_fragment_working_days_iv_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_close" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/order_status_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/under_preparation_rb"
            style="@style/TextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:padding="10dp"
            android:text="@string/under_preparation" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/ready_to_pick_or_deliver_rb"
            style="@style/TextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/ready_to_pick_or_deliver" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/in_transit_rb"
            style="@style/TextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/in_transit" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/delivery_or_picked_rb"
            style="@style/TextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/delivery_or_picked" />

    </RadioGroup>

    <com.os.foodie.ui.custom.RippleAppCompatButton
        android:id="@+id/done_btn"
        style="@style/ButtonOrange"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_bt_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="@dimen/login_bt_margin_end"
        android:layout_marginStart="@dimen/login_bt_margin_start"
        android:layout_marginTop="@dimen/login_bt_log_in_margin_top"
        android:gravity="center"
        android:text="@string/done" />

</LinearLayout>