<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/merchant_details_ll_main_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/merchant_details_tv_tag_padding_start"
            fontPath="@string/font_default"
            android:text="@string/merchant_details_tv_account_holder_name_tag_text"
            android:textColor="@color/orange" />

        <EditText
            android:id="@+id/fragment_merchant_details_et_account_holder_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            fontPath="@string/font_default"
            android:enabled="false"
            android:inputType="text"
            android:lines="1"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/merchant_details_et_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/merchant_details_tv_tag_margin_top"
            android:paddingStart="@dimen/merchant_details_tv_tag_padding_start"
            fontPath="@string/font_default"
            android:text="@string/merchant_details_et_bank_name_tag_text"
            android:textColor="@color/orange" />

        <EditText
            android:id="@+id/fragment_merchant_details_et_bank_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            fontPath="@string/font_default"
            android:inputType="text"
            android:lines="1"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/merchant_details_et_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/merchant_details_tv_tag_margin_top"
            android:paddingStart="@dimen/merchant_details_tv_tag_padding_start"
            fontPath="@string/font_default"
            android:text="@string/merchant_details_tv_account_number_tag_text"
            android:textColor="@color/orange" />

        <EditText
            android:id="@+id/fragment_merchant_details_et_account_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="number"
            fontPath="@string/font_default"
            android:lines="1"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/merchant_details_et_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/merchant_details_tv_tag_margin_top"
            android:paddingStart="@dimen/merchant_details_tv_tag_padding_start"
            fontPath="@string/font_default"
            android:text="@string/merchant_details_et_confirm_account_number_tag_text"
            android:textColor="@color/orange" />

        <EditText
            android:id="@+id/fragment_merchant_details_et_confirm_account_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            fontPath="@string/font_default"
            android:enabled="false"
            android:inputType="number"
            android:lines="1"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/merchant_details_et_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/merchant_details_tv_tag_margin_top"
            android:paddingStart="@dimen/merchant_details_tv_tag_padding_start"
            android:text="@string/merchant_details_et_ifsc_code_tag_text"
            fontPath="@string/font_default"
            android:textColor="@color/orange" />

        <EditText
            android:id="@+id/fragment_merchant_details_et_ifsc_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="text"
            fontPath="@string/font_default"
            android:lines="1"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/merchant_details_et_text_size" />

        <com.os.foodie.ui.custom.RippleAppCompatButton
            android:id="@+id/activity_merchant_details_bt_save"
            style="@style/ButtonOrange"
            android:layout_width="match_parent"
            android:layout_height="@dimen/merchant_details_bt_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="@dimen/merchant_details_bt_margin_start_end"
            android:layout_marginStart="@dimen/merchant_details_bt_margin_start_end"
            android:layout_marginTop="@dimen/merchant_details_bt_save_margin_top"
            android:gravity="center"
            android:text="@string/merchant_details_bt_save_text"
            android:visibility="gone" />

        <com.os.foodie.ui.custom.RippleAppCompatButton
            android:id="@+id/activity_merchant_details_bt_cancel"
            style="@style/ButtonLightGrey"
            android:layout_width="match_parent"
            android:layout_height="@dimen/merchant_details_bt_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="@dimen/merchant_details_bt_margin_start_end"
            android:layout_marginStart="@dimen/merchant_details_bt_margin_start_end"
            android:layout_marginTop="@dimen/merchant_details_bt_cancel_margin_top"
            android:gravity="center"
            android:text="@string/merchant_details_bt_cancel_text"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>